--- a/crds/net-ip-allocation-crds.yaml
+++ b/crds/net-ip-allocation-crds.yaml
@@ -37,6 +37,10 @@ spec:
                       type: string
                     region:
                       type: string
+                    zones:
+                      type: array
+                      items:
+                        type: string
                 strategy:
                   type: object
                   properties:
