--- a/k8s/controller.yaml
+++ b/k8s/controller.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: ip-address-controller
-  namespace: test
+  namespace: kube-system
 spec:
   replicas: 2
   selector:
