--- a/k8s/rbac.yaml
+++ b/k8s/rbac.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: ip-address-controller-sa
-  namespace: test
+  namespace: kube-system
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
@@ -39,7 +39,7 @@ metadata:
 subjects:
   - kind: ServiceAccount
     name: ip-address-controller-sa
-    namespace: test
+    namespace: kube-system
 roleRef:
   kind: ClusterRole
   name: ip-address-controller-role
