--- a/k8s/controller.yaml
+++ b/k8s/controller.yaml
@@ -14,9 +14,15 @@ spec:
         app: ip-address-controller
     spec:
       serviceAccountName: ip-address-controller-sa
+      priorityClassName: system-node-critical
       containers:
         - name: ip-address-controller
-          image: darkbrains/ip-address-controller:v1.0.0@sha256:77fdd6d98de372f053afb25b320023db26eb371c7821847c1511a8134231c557
+          image: darkbrains/ip-address-controller:v1.0.1
+          ports:
+            - name: health
+              containerPort: 8080
+            - name: metrics
+              containerPort: 9999
           imagePullPolicy: Always
           resources:
             requests:
