--- a/crds/net-ip-allocation-crds.yaml
+++ b/crds/net-ip-allocation-crds.yaml
@@ -31,9 +31,18 @@ spec:
                   type: array
                   items:
                     type: string
-                deploymentRef:
+                workloadRef:
                   type: object
+                  required:
+                    - kind
+                    - name
                   properties:
+                    kind:
+                      type: string
+                      enum:
+                        - Deployment
+                        - StatefulSet
+                        - DaemonSet
                     name:
                       type: string
                     namespace:
@@ -57,15 +66,6 @@ spec:
                       type: array
                       items:
                         type: string
-                strategy:
-                  type: object
-                  properties:
-                    maxSurge:
-                      type: integer
-                      minimum: 0
-                    maxUnavailable:
-                      type: integer
-                      minimum: 0
                 reconcileInterval:
                   type: integer
                   minimum: 5
